# Astrology-Synthesis

./: .env.example  .env.phase5.template  .gitignore  ACCESSIBILITY_TESTING_GUIDE.md  AGENT_1_PHASE3_FINALIZATION.md  AGENT_2_KNOWLEDGE_BASE_GUIDE.md  AGENT_ROLES_AND_ASSIGNMENTS.md  AI_AGENT_TEAM.md  AI_MYSTIC_EMPIRE_ANALYSIS_PROMPT.md  API_DOCUMENTATION.md  API_PHASE_5_DOCS.md  ARCHITECTURE_ROLES.md  AUTHENTICATION_SYSTEM_COMPLETE.md  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_STATUS.md  BMAD_AGENT_QUICK_START.md  BMAD_TEAM_INTEGRATION_COMPLETE.md  BMAD_TEAM_START_HERE.txt  BMAD_USAGE_GUIDE.md  CHART_CALCULATOR_IMPLEMENTATION.md  CHART_TESTING_GUIDE.md  CHART_TEST_REPORT.md  COMPLETE_PROJECT_ROADMAP.md  COMPLETION_REPORT.md  CONTRIBUTING.md  COST_ANALYSIS_REPORT.md  DATABASE_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_PRODUCTION.md  DESIGN_BRIEF.md  DESIGN_SYSTEM_IMPLEMENTATION.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  E2E_TESTING_GUIDE.md  ENGINEER_CONSULTATION_BRIEF.md  EXECUTIVE_HANDOFF_SUMMARY.md  GEMINI_AGENT_DEMO.md  GITHUB_ISSUES_LINKS.md  HANDOFF_COMPLETE_DEVELOPMENT_STATUS.md  (+102 more)
backend/: .env.example  .env.production  .env.production.template  .eslintrc.json  .gitignore  API_SETUP_GUIDE.md  BMAD_PATTERN_RECOGNITION.md  Dockerfile  Makefile  Roots-Revealed-API.postman_collection.json  app.py  config.py  eslint.config.mjs  jest.config.js  list_models.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  test_astrology_app.py  test_bmad_system.py  test_gemini_agent.py
backend/agents/: README.md  __init__.py  (+11 more)
(+769 files in other folders)
